# FastApi-AsyncAlchemy

./: REDME.md  main.py  pyproject.toml
fastapi_asyncalchemy/: models.py  service.py
fastapi_asyncalchemy/db/: base.py
tests/: test_fastapi_asyncalchemy.py
