[tool.poetry]
name = "FastApi-AsyncAlchemy"
version = "0.1.0"
description = ""
authors = ["Ramananda Kairi <ramananda.kairi@gmail.ccom>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.74.1"}
SQLAlchemy = "^1.4.31"
typer = "^0.4.0"
asyncpg = "^0.25.0"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Black Config
[tool.black]
line-length = 88


# Mypy Config
[tool.mypy]
ignore-missing-imports = false

# Pytest Config
[tool.pytest]
addopts = ["--cov", "fastapi_async_alchemy"]


# Flake8 Config
[tool.flake8]
max-line-length = 88
